force-app/main/default/objects/clofor_com_cfs__Claim__c/clofor_com_cfs__Claim__c.object-meta.xml
<CustomObject>
    <label>TRB/Claim</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>CLAIM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRB/Claim</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>