force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ActionPlanSummary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActionPlanSummary__c</fullName>
    <label>ACTION PLAN SUMMARY</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>