force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ActionPlanSupervisor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActionPlanSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACTION PLAN SUPERVISOR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActionPlanSupervisor</relationshipName>
    <type>Lookup</type>
</CustomField>