force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ActualFinancialLoss__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualFinancialLoss__c</fullName>
    <label>ACTUAL FINANCIAL LOSS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>