force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__AnnualAchievement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AnnualAchievement__c</fullName>
    <formula>clofor_com_cfs__OrgPerformance__r.clofor_com_cfs__AnnualCrchievement__c</formula>
    <label>Annual Achievement(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>