force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__APITrackingID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__APITrackingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Tracking ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Call_Out_Error__c.clofor_com_cfs__SuccessfulFail__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Call_Out_Error__c</referenceTo>
    <relationshipLabel>TRB/CLAIM</relationshipLabel>
    <relationshipName>TRBClaim</relationshipName>
    <type>Lookup</type>
</CustomField>