force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__CargoOSDType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoOSDType__c</fullName>
    <label>Cargo OSD Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CargoOSDType</valueSetName>
    </valueSet>
</CustomField>