force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ClaimerType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClaimerType__c</fullName>
    <label>CLAIMER TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__InternalExternal</valueSetName>
    </valueSet>
</CustomField>