force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ClaimReceptionist__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClaimReceptionist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLAIM RECEPTIONIST</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CLAIM</relationshipName>
    <type>Lookup</type>
</CustomField>