force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ClaimResponsible__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClaimResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLAIM RESPONSIBLE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClaimResponsible</relationshipName>
    <type>Lookup</type>
</CustomField>