force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClaimStatus__c</fullName>
    <label>CLAIM STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Impact Analysis</fullName>
            </value>
            <value>
                <fullName>Root-Cause Analysis</fullName>
            </value>
            <value>
                <fullName>Action Plan</fullName>
            </value>
            <value>
                <fullName>User Action</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>