force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ContainerInTransportation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerInTransportation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in Transportation</label>
    <referenceTo>clofor_com_cfs__Container_Info__c</referenceTo>
    <relationshipLabel>TRB/CLAIM (CNTR IN TRANS)</relationshipLabel>
    <relationshipName>TRBClaimCNTRInTrans</relationshipName>
    <type>Lookup</type>
</CustomField>