force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ContainerInWHSDepotYard__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerInWHSDepotYard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container in WHS, Depot, Yard</label>
    <referenceTo>clofor_com_cfs__CONTAINER__c</referenceTo>
    <relationshipLabel>TRB/CLAIM (CNTR IN WHS/DEPOT/YARD)</relationshipLabel>
    <relationshipName>TRBClaimCNTRInWHSDepotYard</relationshipName>
    <type>Lookup</type>
</CustomField>