force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__Facility__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>TRB/CLAIM</relationshipLabel>
    <relationshipName>TRBClaim</relationshipName>
    <type>Lookup</type>
</CustomField>