force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ForwardingBasicServiceType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ForwardingBasicServiceType__c</fullName>
    <label>FORWARDING BASIC SERVICE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ForwardingServiceRequired</valueSetName>
    </valueSet>
</CustomField>