force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__IdentifiedLocator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IdentifiedLocator__c</fullName>
    <formula>clofor_com_cfs__TroubleCargoID__r.clofor_com_cfs__LastWosLineItem__r.clofor_com_cfs__Locator__r.Name
&amp;&apos;:&apos;&amp;
 clofor_com_cfs__TroubleCargoID__r.clofor_com_cfs__LastWosLineItem__r.clofor_com_cfs__Locator__r.clofor_com_cfs__LocatorCode__c</formula>
    <label>Identified Locator</label>
    <type>Text</type>
</CustomField>