force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__IdentifiedWOSID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IdentifiedWOSID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Identified W/O/S ID</label>
    <referenceTo>clofor_com_cfs__WorkOrderService__c</referenceTo>
    <relationshipLabel>Cargo Trouble</relationshipLabel>
    <relationshipName>IdentifiedWOSID</relationshipName>
    <type>Lookup</type>
</CustomField>