force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__IdentifiedWOSLineID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IdentifiedWOSLineID__c</fullName>
    <formula>clofor_com_cfs__TroubleCargoID__r.clofor_com_cfs__LastWosLineItem__r.Name</formula>
    <label>Identified W/O/S Line ID</label>
    <type>Text</type>
</CustomField>