force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__IdentifiedWOSRecordType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IdentifiedWOSRecordType__c</fullName>
    <formula>clofor_com_cfs__IdentifiedWOSID__r.RecordType.Name</formula>
    <label>Identified W/O/S Record Type</label>
    <type>Text</type>
</CustomField>