force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ImpactCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ImpactCategory__c</fullName>
    <label>IMPACT CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ImpactCategory</valueSetName>
    </valueSet>
</CustomField>