force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__OrgAnnualTarget__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OrgAnnualTarget__c</fullName>
    <formula>clofor_com_cfs__OrgPerformance__r.clofor_com_cfs__OranizationalTargetID__r.clofor_com_cfs__AnnaulTarget__c</formula>
    <label>Org Annual Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>