force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__RequestTargetDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequestTargetDateTime__c</fullName>
    <label>REQUEST TARGET DATE/TIME</label>
    <type>DateTime</type>
</CustomField>