force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ResolutionActionOwner__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ResolutionActionOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOLUTION ACTION OWNER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResolutionActionOwner</relationshipName>
    <type>Lookup</type>
</CustomField>