force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ReturnDisposalWOID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnDisposalWOID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return/Disposal W/O ID</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipLabel>TRB/CLAIM (Return/Disposal W/O ID)</relationshipLabel>
    <relationshipName>TRBClaim</relationshipName>
    <type>Lookup</type>
</CustomField>