force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__RootCause__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RootCause__c</fullName>
    <label>ROOT-CAUSE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>