force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__ShipmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ShipmentOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloFMS SHIPMENT ORDER ID</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>CLAIM</relationshipLabel>
    <relationshipName>CLAIM</relationshipName>
    <type>Lookup</type>
</CustomField>