force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__TMSTransportID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TMSTransportID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMS TRANSPORT ID</label>
    <referenceTo>clofor_com_cfs__Cargo_Delivery__c</referenceTo>
    <relationshipLabel>CLAIM</relationshipLabel>
    <relationshipName>CLAIM</relationshipName>
    <type>Lookup</type>
</CustomField>