force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__TroubleCargoID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TroubleCargoID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trouble Cargo ID</label>
    <referenceTo>clofor_com_cfs__Cargo__c</referenceTo>
    <relationshipLabel>TROUBLE CARGO</relationshipLabel>
    <relationshipName>TroubleCargo</relationshipName>
    <type>Lookup</type>
</CustomField>