force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__TroubleProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TroubleProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trouble Product ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__PRODUCT__c.clofor_com_cfs__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__PRODUCT__c</referenceTo>
    <relationshipLabel>Cargo Trouble/Claim</relationshipLabel>
    <relationshipName>TroubleProductID</relationshipName>
    <type>Lookup</type>
</CustomField>