force-app/main/default/objects/clofor_com_cfs__Claim__c/fields/clofor_com_cfs__WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloWMS WORK ORDER ID</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipLabel>CLAIM</relationshipLabel>
    <relationshipName>CLAIM</relationshipName>
    <type>Lookup</type>
</CustomField>