force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__APIFail.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__APIFail</fullName>
    <active>true</active>
    <label>API Fail</label>
</RecordType>