force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__CargoTrouble.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CargoTrouble</fullName>
    <active>true</active>
    <label>Cargo Trouble</label>
</RecordType>