force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__CargoTroubleFromAudit.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CargoTroubleFromAudit</fullName>
    <active>true</active>
    <label>Cargo Trouble from Audit</label>
</RecordType>