force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__Claim.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Claim</fullName>
    <active>true</active>
    <label>Claim</label>
</RecordType>