force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__ContainerInWHSDepotYard.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ContainerInWHSDepotYard</fullName>
    <active>true</active>
    <label>Container in WHS, Depot, Yard</label>
</RecordType>