force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__FacilityTrouble.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FacilityTrouble</fullName>
    <active>true</active>
    <label>Facility Trouble</label>
</RecordType>