force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__LowPerformance.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LowPerformance</fullName>
    <active>true</active>
    <label>Low Performance</label>
</RecordType>