force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__NonCompliance.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__NonCompliance</fullName>
    <active>true</active>
    <label>Non-Compliance</label>
</RecordType>