force-app/main/default/objects/clofor_com_cfs__Claim__c/recordTypes/clofor_com_cfs__TruckFleet.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__TruckFleet</fullName>
    <active>true</active>
    <label>Truck/Fleet</label>
</RecordType>